# wick-components

./: .gitignore  Cargo.toml  README.md  justfile
components/app-config/: Cargo.toml  README.md  component.wick  justfile
components/app-config/src/: lib.rs
components/array/: Cargo.toml  README.md  component.wick  justfile
components/array/src/: lib.rs
components/azure-openai/: Cargo.toml  README.md  build.rs  component.wick  http-api.wick  justfile  types.wick
components/azure-openai/src/: lib.rs
components/azureblob/: README.md  azureblob-http-client.wick  azureblob.wick  component.wick  justfile
components/azurevault/: README.md  azureauth-http-client.wick  azurevault-http-client.wick  azurevault.wick  component.wick
components/cookies/: Cargo.toml  README.md  component.wick  justfile
components/cookies/src/: lib.rs
components/csv/: Cargo.toml  README.md  component.wick  go.mod  justfile
components/csv/pkg/iotacsv/: interfaces.go
components/csv/src/: lib.rs
components/github/: Cargo.toml  README.md  build.rs  component.wick  github-api.wick  github-driver.wick  github.wick  justfile
components/github/src/: lib.rs
components/hello-world/: Cargo.toml  README.md  component.wick  justfile
components/hello-world/src/: lib.rs
components/hmac/: Cargo.toml  README.md  component.wick  justfile
components/hmac/src/: lib.rs
components/http-auth/: Cargo.toml  README.md  component.wick
components/http-auth/src/: lib.rs
components/http-client-ip/: Cargo.toml  README.md  component.wick  justfile
components/http-client-ip/src/: lib.rs
components/http-headers/: Cargo.toml  README.md  component.wick  justfile
components/http-headers/src/: lib.rs
components/infer/: .gitignore  Cargo.toml  component.wick
components/infer/src/: llama.rs
components/infer/src/llama/: model.rs
components/jinja/: Cargo.toml  README.md  component.wick  component.yaml  justfile  manifest.json
components/jinja/src/: lib.rs
components/liquid/: Cargo.toml  README.md  build.rs  component.wick  justfile  liquid.wick
components/liquid-json/: Cargo.toml  README.md  build.rs  component.wick  component.yaml  justfile
components/liquid-json/src/: lib.rs
components/liquid/src/: lib.rs
components/llama/: Cargo.toml  README.md  config.json  justfile  tokenizer.json
components/llama/src/: __lib.rs  lib.rs  llama.rs
components/llama/src/llama/: weights.rs
components/log/: Cargo.toml  README.md  component.wick  justfile
components/log/src/: lib.rs
components/loop/: Cargo.toml  README.md  build.rs  component.wick  justfile  loop.wick
components/loop/.cargo/: config
components/loop/src/: lib.rs
components/oauth/: .env  Cargo.toml  README.md  app.wick  build.rs  component.wick  db.wick  docker-compose.yaml  http-with.wick  http.wick  justfile  oauth-db-mssql.wick  oauth-db-postgres.wick  oauth-db-sqlite.wick  oauth-db.wick  oauth-engine.wick  oauth-http.wick  oauth-mssql.wick  oauth-postgres.wick  oauth-sqlite.wick  oauth.wick
components/oauth/db/: init.sql
components/oauth/db/mssql/: init.sql
components/oauth/db/postgres/: init.sql
components/oauth/db/sqlite/: init.sql
components/oauth/src/: lib.rs
components/object/: Cargo.toml  README.md  build.rs  component.wick  component.yaml  justfile  object.wick
components/object/src/: lib.rs
components/openapi-ui/: Cargo.toml  README.md  component.wick  justfile
components/openapi-ui/package/: package.json
components/openapi-ui/src/: lib.rs
components/rand/: Cargo.toml  README.md  component.wick  component.yaml  justfile
components/rand/src/: lib.rs
components/redact/: Cargo.toml  README.md  cli.wick  component.wick  config.json  data.txt  redact.wick
components/redact/src/: lib.rs
components/regex/: Cargo.toml  README.md  build.rs  component.wick  component.yaml  justfile
components/regex/src/: lib.rs
components/sendgrid/: README.md  sendgrid-http.wick  sendgrid.wick
components/string/: Cargo.toml  README.md  component.wick  justfile
components/string/src/: lib.rs
components/string_template/: .gitignore  Cargo.toml  component.yaml  justfile
components/string_template/src/: lib.rs
components/unzip/: Cargo.toml  README.md  build.rs  component.wick  justfile
components/unzip/src/: lib.rs
components/unzip/src/actions/: mod.rs
components/url/: apex.axdl
components/url/src/actions/url/: parse.rs
components/usps/: Cargo.toml  README.md  build.rs  component.wick  justfile  usps-engine.wick  usps-http.wick  usps-types.wick  usps.wick
components/usps/src/: lib.rs
components/wickdoc/: .gitignore  Cargo.toml  README.md  component.wick
components/wickdoc/src/: lib.rs  readme.liquid
components/xml/: Cargo.toml  README.md  component.wick  justfile
components/xml/src/: lib.rs
components/yolo/: .gitignore  Cargo.toml  README.md  component.wick  config.json  justfile  test.wick  yolofs.wick
components/yolo/src/: lib.rs  model.rs
components/yolo/src/model/: inner.rs  structs.rs
http-client-ip/: Cargo.toml  component.wick
http-client-ip/src/: lib.rs
iotas/csv/: bus.yaml
iotas/csv/cmd/: main.go
iotas/csv/pkg/iotacsv/: iota.go  services.go
iotas/csv/pkg/iotacsv/testdata/: data.csv
iotas/unzip/: .gitignore  Cargo.toml  apex.axdl  justfile  resources.yaml
iotas/unzip/src/: error.rs
iotas/unzip/src/actions/: mod.rs
iotas/unzip/src/actions/unzip/: unzip.rs
iotas/uri/: Cargo.toml  apex.axdl  apex.yaml  bus.yaml  iota.yaml
iotas/uri/src/: error.rs  lib.rs
iotas/uri/src/actions/: mod.rs
iotas/uri/src/actions/uri/: parse.rs
iotas/url/: Cargo.toml  apex.yaml
iotas/url/src/actions/: mod.rs
migrations/: Cargo.toml  component.wick  justfile
old/csv/: apex.axdl  apex.yaml  go.sum
old/csv/pkg/iotacsv/: service_test.go
old/unzip/: apex.yaml  bus.yaml
old/unzip/src/actions/: mod.rs
types/: http.wick
usps/: component.wick
