
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"


[workspace]
resolver = "2"
# List rust components here
members = [
  "components/app-config",
  "components/array",
  "components/cookies",
  "components/csv",
  "components/github",
  "components/hello-world",
  "components/hmac",
  "components/http-auth",
  "components/http-client-ip",
  "components/http-headers",
  "components/llama",
  "components/jinja",
  "components/liquid-json",
  "components/liquid",
  "components/log",
  "components/loop",
  "components/oauth",
  "components/object",
  "components/openapi-ui",
  "components/rand",
  "components/redact",
  "components/regex",
  "components/string",
  "components/unzip",
  "components/usps",
  "components/xml",
  "components/azure-openai",
]

[workspace.dependencies]
wick-component = { git = "https://github.com/candlecorp/wick.git", branch = "main", features = [
  "datetime",
] }
wick-component-codegen = { git = "https://github.com/candlecorp/wick.git", branch = "main" }
