[package]
name = "app-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = { version = "1" }
serde_yaml = "0.9.25"
wick-config = { version = "0.28.0", default-features = false, features = [
  "v1",
] }

[build-dependencies]
wick-component-codegen = { workspace = true }
