[package]
name = "azure-openai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = { version = "1" }

[build-dependencies]
wick-component-codegen = { workspace = true }
