[package]
name = "cookies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
basic-cookies = "0.1.4"
anyhow = { version = "1.0" }

[build-dependencies]
wick-component-codegen = { workspace = true }
