[package]
name = "hmac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[features]
default = []
localgen = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
hmac = "0.12.1"
sha2 = "0.10.7"
async-recursion = "1.0"

[build-dependencies]
wick-component-codegen = { workspace = true }
