[package]
name = "oauth_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { git = "https://github.com/candlecorp/wick.git", features = [
    "uuid",
    "datetime",
] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = { version = "1" }
cookie = "0.17.0"
urlencoding = "2"
base64 = "0.21"

[build-dependencies]
wick-component-codegen = { git = "https://github.com/candlecorp/wick.git" }

# Including this section keeps this crate out of a workspace without needing to alter the workspace.
[workspace]
