[package]
name = "object"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
url = "2.3"
serde-xml-rs = "0.6"
jsonpath_lib = "0.3"
anyhow = { version = "1.0" }

[build-dependencies]
wick-component-codegen = { workspace = true }
