[package]
name = "openapi_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[features]
default = []
localgen = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { git = "https://github.com/candlecorp/wick.git", branch = "main", features = [
  "bytes",
  "datetime"
] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
serde_json = "1.0.94"
rust-embed = { version = "6.7", features = ["debug-embed"] }

[build-dependencies]
wick-component-codegen = { git = "https://github.com/candlecorp/wick.git", branch = "main" }
