[package]
name = "openapi_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
localgen = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true, features = ["bytes"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
serde_json = "1.0.94"
rust-embed = { version = "6.7", features = ["debug-embed"] }

[build-dependencies]
wick-component-codegen = { workspace = true }
