[package]
name = "unzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
localgen = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
stream-unzip = "0.2.1"
async-recursion = "1.0"

[build-dependencies]
wick-component-codegen = { workspace = true }
