[package]
name = "usps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
async-trait = "0.1"
anyhow = { version = "1" }
regex = "1.9"

[build-dependencies]
wick-component-codegen = { workspace = true }
