[package]
name = "wickdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
serde_json = "1"
serde_yaml = "0.9.25"
liquid = { package = "loose-liquid", version = "0.27" }

[build-dependencies]
wick-component-codegen = { workspace = true }
