[package]
name = "xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = { version = "1" }
serde-xml-rs = "0.6"
xml-rs = "0.8"

[build-dependencies]
wick-component-codegen = { workspace = true }
