[package]
name = "yolo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wick-component = { workspace = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
anyhow = { version = "1" }
image = { version = "0.24.7" }

#
# Candle libraries
#
candle-core = { version = "0.3.0" }
candle-nn = { version = "0.3.0" }
candle-transformers = { version = "0.3.0" }

#
# Misc
#
serde_json = { version = "1.0.107" }
num-traits = { version = "0.2.16" }
byteorder = { version = "1.4.3" }


[build-dependencies]
wick-component-codegen = { workspace = true }
